--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A real CRUD app with npm",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node index",
+    "dev": "cross-env NODE_ENV=development nodemon index"
   },
   "author": "Zubair Idris Aweda",
   "license": "ISC",
@@ -21,5 +22,9 @@
     "npm": "^6.14.6",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2",
+    "nodemon": "^2.0.4"
   }
 }
