--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "corona",
   "version": "1.0.0",
   "description": "A real CRUD app with npm",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node index",
-    "dev": "cross-env NODE_ENV=development nodemon index"
+    "start": "cross-env NODE_ENV=production node app",
+    "dev": "cross-env NODE_ENV=development nodemon app"
   },
   "author": "Zubair Idris Aweda",
   "license": "ISC",
